# RTFM-Redox

./: .gitignore  Cargo.toml  Dockerfile  README.md  snips.db
src/: command_variables.rs  console_view.rs  database.rs  execute_command.rs  main.rs  search.rs  terminal_actions.rs  terminal_commands.rs  terminal_output.rs
