[package]
name = "redox"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.20.0", features = ["macros"]}
termion = "2.0.1"
anyhow = "1.0.71"
clipboard = "0.5.0"
x11-clipboard = "0.7.1"
dialoguer = "0.10.4"
sys = "0.0.0"
